modernize to jdk25
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>